# TDA_practical

./: .gitignore  README.md  pyproject.toml
data/: DOWNLOAD_INSTRUCTIONS.md
exploratory/: customClustering.py  data_csv_structure.ipynb  house_mapper_2009.html  house_mapper_2010.html  mapper_analysis.ipynb
src/tda_practical/: __init__.py  customClustering.py
