[project]
name = "tda-practical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maxjost42", email = "max.jost@student.tugraz.at" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tda-practical = "tda_practical:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
