[project]
name = "tda-practical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maxjost42", email = "max.jost@student.tugraz.at" }
]
requires-python = ">=3.11"
dependencies = [
    "ipympl>=0.10.0",
    "ipython>=9.14.1",
    "jupyter>=1.1.1",
    "kmapper>=2.1.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[project.scripts]
tda-practical = "tda_practical:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
